<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:text="@string/strYou"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"/>
        <TextView
            android:id="@+id/scrYou"
            android:text="0"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:text="@string/strPhone"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/scrPhone"
            android:text="0"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical" android:text="@string/strTot"/>
        <TextView
            android:id="@+id/scrTot"
            android:text="0"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dip"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top|center"
        android:text="@string/strTitle"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_main3"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:background="@drawable/back_img"
        android:onClick="go_main" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/Button01"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_list"
            android:tag="0"
            android:text="@string/strButton1" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@drawable/shape_list"
            android:tag="1"
            android:text="@string/strButton2" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:background="@drawable/shape_list"
            android:tag="2"
            android:text="@string/strButton3" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="40dip"
            android:background="@drawable/shape_list"
            android:src="@drawable/img_1" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dip"
            android:background="@drawable/shape_list"
            android:src="@drawable/img_3" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/strResult1"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>